Enhance GitHub Music Generator with AI-powered intelligent scanning
Major Features Added:
- AI-powered file selection using DeepSeek for intelligent repository analysis
- Two-step analysis: file listing then AI-driven content selection
- Enhanced repository analysis with themes, emotions, and musical metaphors
- Auto music style selection based on repository characteristics
- Added Hard Rock and Heavy Metal genres
- Character limit enforcement (2000 chars prompts, 3000 chars lyrics)
- Removed timing instructions from music prompts
- Fixed variable scoping issues and style parameter passing
- Added detailed logging for debugging AI interactions
- Enhanced frontend with style display and character counts

Technical Improvements:
- Smart JSON parsing with markdown handling
- Fallback systems for robustness
- Better error handling and user feedback
- Optimized API usage with proper token requirements

The app now transforms code repositories into musical inspiration using sophisticated AI analysis while respecting user style preferences and technical constraints.

--- a/public/index.html
+++ b/public/index.html
@@ -258,8 +258,11 @@
                 <div class="form-group">
                     <label for="musicStyle">Music Style:</label>
                     <select id="musicStyle">
+                        <option value="auto">🤖 Auto (AI decides based on repository)</option>
                         <option value="electronic">Electronic</option>
                         <option value="rock">Rock</option>
+                        <option value="hardrock">Hard Rock</option>
+                        <option value="heavy-metal">Heavy Metal</option>
                         <option value="pop">Pop</option>
                         <option value="jazz">Jazz</option>
                         <option value="classical">Classical</option>
@@ -326,6 +329,7 @@
                     <span>📊 ${results.fileStats?.total || results.analysis?.totalFiles || 'N/A'} files</span>
                     <span>🎯 ${results.fileStats?.selected || 'N/A'} AI-selected</span>
                     <span>🔍 ${results.fileStats?.analyzed || 'N/A'} analyzed</span>
+                    <span>🎵 ${results.selectedStyle || 'N/A'}</span>
                     <span>🏷️ ${results.repository.topics?.length > 0 ? results.repository.topics.join(', ') : 'No topics'}</span>
                 </div>
                 ${results.purpose ? `
